rpi5/nzbhydra2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra2
  labels:
    app: nzbhydra2
spec:
  selector:
    app: nzbhydra2
  ports:
    - port: 80
      targetPort: 5076
  type: ClusterIP
