rpi5/nzbhydra2/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbhydra2
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nzbhydra.local`) || Host(`nzbhydra.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: nzbhydra2
          port: 80
  tls:
    secretName: nzbhydra2-cert-tls
    domains:
      - main: nzbhydra.local
        sans:
          - nzbhydra.internal
